# localfocus

./: Cargo.toml  README.md
macos/: Info.plist  LocalFocus.entitlements  LocalFocusHost.swift  README-App-Store.md  make-icon.py
mobile/: README.md  build-android-server.sh
mobile/local_focus_mobile/: README.md  pubspec.yaml
mobile/local_focus_mobile/android/app/: build.gradle.kts
mobile/local_focus_mobile/android/app/src/main/: AndroidManifest.xml
mobile/local_focus_mobile/android/app/src/main/res/values/: strings.xml
mobile/local_focus_mobile/android/app/src/main/res/xml/: accessibility_service_config.xml
mobile/local_focus_mobile/ios/Runner/: AppDelegate.swift  Info.plist
mobile/local_focus_mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/local_focus_mobile/lib/: companion_app.dart  main.dart
mobile/local_focus_mobile/linux/: CMakeLists.txt
mobile/local_focus_mobile/linux/runner/: my_application.cc
mobile/local_focus_mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/local_focus_mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/local_focus_mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/local_focus_mobile/test/: widget_test.dart
mobile/local_focus_mobile/web/: index.html  manifest.json
mobile/local_focus_mobile/windows/: CMakeLists.txt
mobile/local_focus_mobile/windows/runner/: Runner.rc  main.cpp
scripts/: autostart-linux.sh  autostart-macos.sh  autostart-windows.ps1  install.ps1  install.sh  make_qr_svg.py  package-dmg.sh  package-mas.sh
src/: main.rs
(+4 files in other folders)
