[package]
name = "local-focus"
version = "0.1.0"
edition = "2021"
description = "Privacy-first local activity tracker with focus mode and reports"
license = "MIT"

[dependencies]
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
